--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,15 @@ body{
     z-index: 0;
 }
 
+
+
 .navbar-dark{
     background-color: #512DA8;
+}
+
+.tab-content{
+    border-left:1px solid #dddddd;
+    border-right:1px solid #ddd;
+    border-bottom:1px solid #ddd;
+    padding:10px;
 }
